[gd_scene load_steps=59 format=2]

[ext_resource path="res://Sprites/UI/Farm_button.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Offshore_button.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Tax_ring.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Misc_UI.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Money_bar.png" type="Texture" id=5]
[ext_resource path="res://Sprites/UI/Money_slider.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Utils/UIManager.gd" type="Script" id=7]
[ext_resource path="res://Prefabs/Utils/MoneyManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://Prefabs/FX/Dollar_fx.tscn" type="PackedScene" id=9]
[ext_resource path="res://Audio/SFX/Presses/Press-2_bitcrushed.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/SFX/Presses/Press-1_bitcrushed.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/SFX/Presses/Press-3_bitcrushed.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/SFX/Presses/Press-4_bitcrushed.wav" type="AudioStream" id=13]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=14]
[ext_resource path="res://Prefabs/Utils/OPManager.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sprites/UI/UI_theme-1.tres" type="Theme" id=16]
[ext_resource path="res://Audio/SFX/Beeps/Eagle_OS_notification.wav" type="AudioStream" id=17]
[ext_resource path="res://Audio/SFX/Beeps/Eagle_OS_alert.wav" type="AudioStream" id=18]
[ext_resource path="res://Audio/SFX/Beeps/Eagle_OS_popup.wav" type="AudioStream" id=19]
[ext_resource path="res://Sprites/UI/Pause.png" type="Texture" id=20]
[ext_resource path="res://Sprites/UI/Check.png" type="Texture" id=21]
[ext_resource path="res://Sprites/UI/Uncheck.png" type="Texture" id=22]
[ext_resource path="res://Sprites/UI/Volume_grabber.png" type="Texture" id=23]
[ext_resource path="res://Sprites/UI/Volume.png" type="Texture" id=24]
[ext_resource path="res://Sprites/UI/Fonts/AGENCYR.TTF" type="DynamicFontData" id=25]
[ext_resource path="res://Sprites/UI/Volume_empty.png" type="Texture" id=26]
[ext_resource path="res://Sprites/UI/Volume_grabber_highlight.png" type="Texture" id=27]
[ext_resource path="res://Scripts/Utils/Pause.gd" type="Script" id=28]
[ext_resource path="res://Audio/SFX/Beeps/Change_audio.wav" type="AudioStream" id=29]
[ext_resource path="res://Sprites/UI/Game_over_document.png" type="Texture" id=30]
[ext_resource path="res://Sprites/UI/Game_over_document_button.png" type="Texture" id=31]
[ext_resource path="res://Sprites/UI/Game_over_document_button_hover.png" type="Texture" id=32]
[ext_resource path="res://Sprites/UI/Fonts/Default_font.tres" type="DynamicFont" id=33]
[ext_resource path="res://Scripts/Utils/GameOverScreen.gd" type="Script" id=34]
[ext_resource path="res://Audio/SFX/Boots/Printer_8-bit.wav" type="AudioStream" id=35]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 90, 22 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 22, 22 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 226, 15 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="DynamicFont" id=10]
size = 10
extra_spacing_char = 1
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 26 )
region_rect = Rect2( 0, 0, 48, 16 )

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 24 )
region_rect = Rect2( 0, 0, 48, 16 )
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0196078, 0, 0.0392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.980392, 0.972549, 0.960784, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=15]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=14]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 25 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 32 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 31 )
region_rect = Rect2( 0, 0, 64, 32 )

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="Animation" id=26]
resource_name = "default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 64, 200 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "popup"
length = 3.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sheet:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 3.4, 3.5, 3.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 64, 200 ), Vector2( 64, 150 ), Vector2( 64, 200 ), Vector2( 64, 18 ), Vector2( 64, 12 ), Vector2( 64, 18 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Audio/Printer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="UI" type="CanvasLayer"]

[node name="MoneyManager" parent="." instance=ExtResource( 8 )]

[node name="OPManager" parent="." instance=ExtResource( 15 )]
money_manager_path = NodePath("../MoneyManager")

[node name="Control" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 7 )
dollar_fx = ExtResource( 9 )
money_manager_path = NodePath("../MoneyManager")
op_manager_path = NodePath("../OPManager")

[node name="Misc_UI" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.0
margin_top = -45.0
margin_right = 122.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 122, 22 )
texture = ExtResource( 4 )

[node name="Interactables" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Farm_button" type="Button" parent="Control/Interactables"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.0
margin_top = -23.0
margin_right = 45.0
margin_bottom = -1.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 4 )

[node name="Offshore_progress" type="TextureProgress" parent="Control/Interactables"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 47.0
margin_top = -23.0
margin_right = 69.0
margin_bottom = -1.0
max_value = 20.0
step = 0.1
value = 20.0
texture_progress = ExtResource( 2 )
fill_mode = 3

[node name="Offshore_button" type="Button" parent="Control/Interactables/Offshore_progress"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -11.0
margin_top = -22.0
margin_right = 11.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Money_meter" type="HSlider" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -113.0
margin_top = -39.0
margin_right = 113.0
margin_bottom = -23.0
custom_icons/tick = ExtResource( 6 )
custom_icons/grabber_disabled = ExtResource( 6 )
custom_icons/grabber_highlight = ExtResource( 6 )
custom_icons/grabber = ExtResource( 6 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
min_value = -200.0
max_value = 200.0
editable = false

[node name="Tax_progress" type="TextureProgress" parent="Control"]
margin_left = 59.0
margin_top = 141.0
margin_right = 81.0
margin_bottom = 163.0
max_value = 5.0
step = 0.1
value = 5.0
texture_progress = ExtResource( 3 )
fill_mode = 5

[node name="ParticleContainer" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Popups" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Offshore_warning" type="AcceptDialog" parent="Control/Popups"]
margin_right = 83.0
margin_bottom = 58.0
theme = ExtResource( 16 )
dialog_text = "You cannot upgrade
 your Offshore 
Operations!"

[node name="Offshore_buy" type="ConfirmationDialog" parent="Control/Popups"]
margin_right = 200.0
margin_bottom = 70.0
theme = ExtResource( 16 )
dialog_text = "Upgrade Offshore Operations"

[node name="Pause" type="Control" parent="Control" groups=["SavedOptions"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 28 )

[node name="Background" type="TextureRect" parent="Control/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 20 )

[node name="Tween" type="Tween" parent="Control/Pause"]

[node name="Items" type="Control" parent="Control/Pause"]
anchor_right = 0.273438
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Pause/Items"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 9.0

[node name="Music" type="Label" parent="Control/Pause/Items/VBoxContainer"]
margin_right = 83.0
margin_bottom = 12.0
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 10 )
text = "Music"
align = 1
valign = 1

[node name="Music_slider" type="HSlider" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 16.0
margin_right = 83.0
margin_bottom = 32.0
custom_icons/grabber_disabled = ExtResource( 23 )
custom_icons/grabber_highlight = ExtResource( 27 )
custom_icons/grabber = ExtResource( 23 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 11 )
min_value = -80.0
max_value = 1.0
value = 1.0

[node name="SFX" type="Label" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 36.0
margin_right = 83.0
margin_bottom = 48.0
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 10 )
text = "SFX"
align = 1
valign = 1

[node name="SFX_slider" type="HSlider" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 52.0
margin_right = 83.0
margin_bottom = 68.0
custom_icons/grabber_disabled = ExtResource( 23 )
custom_icons/grabber_highlight = ExtResource( 27 )
custom_icons/grabber = ExtResource( 23 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 11 )
min_value = -80.0
max_value = 1.0
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="Master" type="Label" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 72.0
margin_right = 83.0
margin_bottom = 84.0
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 10 )
text = "Master"
align = 1
valign = 1

[node name="Master_slider" type="HSlider" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 88.0
margin_right = 83.0
margin_bottom = 104.0
custom_icons/grabber_disabled = ExtResource( 23 )
custom_icons/grabber_highlight = ExtResource( 27 )
custom_icons/grabber = ExtResource( 23 )
custom_styles/slider = SubResource( 13 )
custom_styles/grabber_area_highlight = SubResource( 11 )
custom_styles/grabber_area = SubResource( 11 )
min_value = -80.0
max_value = 1.0
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="Fullscreen_check" type="CheckBox" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 108.0
margin_right = 83.0
margin_bottom = 144.0
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 10 )
custom_icons/checked = ExtResource( 21 )
custom_icons/unchecked = ExtResource( 22 )
custom_styles/pressed = SubResource( 9 )
text = "Fullscreen"

[node name="Quit" type="Button" parent="Control/Pause/Items/VBoxContainer"]
margin_top = 148.0
margin_right = 83.0
margin_bottom = 164.0
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 10 )
text = "QUIT"

[node name="Audio" type="Node" parent="Control/Pause"]

[node name="Music_audio" type="AudioStreamPlayer" parent="Control/Pause/Audio"]
stream = ExtResource( 29 )
bus = "Music"

[node name="SFX_audio" type="AudioStreamPlayer" parent="Control/Pause/Audio"]
stream = ExtResource( 29 )
bus = "SFX"

[node name="Master_audio" type="AudioStreamPlayer" parent="Control/Pause/Audio"]
stream = ExtResource( 29 )

[node name="Fullscreen_audio" type="AudioStreamPlayer" parent="Control/Pause/Audio"]
script = ExtResource( 14 )
samples = [ ExtResource( 17 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="Hover_audio" type="AudioStreamPlayer" parent="Control/Pause/Audio"]
script = ExtResource( 14 )
samples = [ ExtResource( 19 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="GameOver" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 34 )
menu_path = NodePath("Sheet")

[node name="Background" type="ColorRect" parent="Control/GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sheet" type="TextureRect" parent="Control/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 118.0
margin_right = 64.0
margin_bottom = 246.0
texture = ExtResource( 30 )

[node name="Risk" type="Label" parent="Control/GameOver/Sheet"]
anchor_left = 0.234375
anchor_top = 0.28125
anchor_right = 0.765625
anchor_bottom = 0.4375
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 15 )
text = "1234567890"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HighRisk" type="Label" parent="Control/GameOver/Sheet"]
anchor_left = 0.421875
anchor_top = 0.5
anchor_right = 0.882813
anchor_bottom = 0.617188
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 14 )
text = "1234567890"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Retry" type="Button" parent="Control/GameOver/Sheet"]
margin_left = 33.0
margin_top = 79.0
margin_right = 97.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 33 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 23 )
custom_styles/disabled = SubResource( 20 )
custom_styles/normal = SubResource( 18 )
text = "RETRY"

[node name="Quit" type="Button" parent="Control/GameOver/Sheet"]
margin_left = 33.0
margin_top = 112.0
margin_right = 97.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 33 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 24 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
text = "QUIT"

[node name="Anims" type="AnimationPlayer" parent="Control/GameOver"]
anims/default = SubResource( 26 )
anims/popup = SubResource( 25 )

[node name="Audio" type="Node" parent="Control/GameOver"]

[node name="Printer" type="AudioStreamPlayer" parent="Control/GameOver/Audio"]
stream = ExtResource( 35 )

[node name="Press_audio" type="AudioStreamPlayer" parent="Control/GameOver/Audio"]
script = ExtResource( 14 )
samples = [ ExtResource( 17 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="Hover_audio" type="AudioStreamPlayer" parent="Control/GameOver/Audio"]
script = ExtResource( 14 )
samples = [ ExtResource( 19 ) ]
random_volume_range = 0
random_pitch_range = 0.7

[node name="Audio" type="Node" parent="Control"]

[node name="Farm" type="AudioStreamPlayer" parent="Control/Audio"]
pitch_scale = 2.0
bus = "SFX"
script = ExtResource( 14 )
samples = [ ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 13 ) ]
random_strategy = 1
random_volume_range = 0
random_pitch_range = 0

[node name="Popup" type="AudioStreamPlayer" parent="Control/Audio"]
stream = ExtResource( 19 )
bus = "SFX"

[node name="Notification" type="AudioStreamPlayer" parent="Control/Audio"]
stream = ExtResource( 17 )
bus = "SFX"

[node name="Alert" type="AudioStreamPlayer" parent="Control/Audio"]
stream = ExtResource( 18 )
bus = "SFX"

[connection signal="button_down" from="Control/Interactables/Farm_button" to="Control" method="_on_Farm_button_button_down"]
[connection signal="pressed" from="Control/Interactables/Offshore_progress/Offshore_button" to="Control" method="_on_Offshore_button_pressed"]
[connection signal="confirmed" from="Control/Popups/Offshore_buy" to="Control" method="_on_Offshore_buy_confirmed"]
[connection signal="tween_all_completed" from="Control/Pause/Tween" to="Control/Pause" method="_on_Tween_tween_all_completed"]
[connection signal="focus_entered" from="Control/Pause/Items/VBoxContainer/Music_slider" to="Control/Pause" method="_on_Music_slider_focus_entered"]
[connection signal="mouse_entered" from="Control/Pause/Items/VBoxContainer/Music_slider" to="Control/Pause" method="_on_Music_slider_mouse_entered"]
[connection signal="value_changed" from="Control/Pause/Items/VBoxContainer/Music_slider" to="Control/Pause" method="_on_Music_slider_value_changed"]
[connection signal="focus_entered" from="Control/Pause/Items/VBoxContainer/SFX_slider" to="Control/Pause" method="_on_SFX_slider_focus_entered"]
[connection signal="mouse_entered" from="Control/Pause/Items/VBoxContainer/SFX_slider" to="Control/Pause" method="_on_SFX_slider_mouse_entered"]
[connection signal="value_changed" from="Control/Pause/Items/VBoxContainer/SFX_slider" to="Control/Pause" method="_on_SFX_slider_value_changed"]
[connection signal="focus_entered" from="Control/Pause/Items/VBoxContainer/Master_slider" to="Control/Pause" method="_on_Master_slider_focus_entered"]
[connection signal="mouse_entered" from="Control/Pause/Items/VBoxContainer/Master_slider" to="Control/Pause" method="_on_Master_slider_mouse_entered"]
[connection signal="value_changed" from="Control/Pause/Items/VBoxContainer/Master_slider" to="Control/Pause" method="_on_Master_slider_value_changed"]
[connection signal="focus_entered" from="Control/Pause/Items/VBoxContainer/Fullscreen_check" to="Control/Pause" method="_on_Fullscreen_check_focus_entered"]
[connection signal="mouse_entered" from="Control/Pause/Items/VBoxContainer/Fullscreen_check" to="Control/Pause" method="_on_Fullscreen_check_mouse_entered"]
[connection signal="toggled" from="Control/Pause/Items/VBoxContainer/Fullscreen_check" to="Control/Pause" method="_on_Fullscreen_check_toggled"]
[connection signal="button_up" from="Control/Pause/Items/VBoxContainer/Quit" to="Control/Pause" method="_on_Quit_button_up"]
[connection signal="focus_entered" from="Control/Pause/Items/VBoxContainer/Quit" to="Control/Pause" method="_on_Quit_focus_entered"]
[connection signal="mouse_entered" from="Control/Pause/Items/VBoxContainer/Quit" to="Control/Pause" method="_on_Quit_mouse_entered"]
[connection signal="focus_entered" from="Control/GameOver/Sheet/Retry" to="Control/GameOver" method="_on_Retry_focus_entered"]
[connection signal="mouse_entered" from="Control/GameOver/Sheet/Retry" to="Control/GameOver" method="_on_Retry_mouse_entered"]
[connection signal="pressed" from="Control/GameOver/Sheet/Retry" to="Control/GameOver" method="_on_Retry_pressed"]
[connection signal="focus_entered" from="Control/GameOver/Sheet/Quit" to="Control/GameOver" method="_on_Quit_focus_entered"]
[connection signal="mouse_entered" from="Control/GameOver/Sheet/Quit" to="Control/GameOver" method="_on_Quit_mouse_entered"]
[connection signal="pressed" from="Control/GameOver/Sheet/Quit" to="Control/GameOver" method="_on_Quit_pressed"]
